--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,5 +1,5 @@
 
-body {
+html, body {
   margin: 0;
   /* height: 100%; */
   font-family: 'Orbitron', sans-serif;
